Added support ItemsSold column for The Mall

--- a/templates/the_mall.html
+++ b/templates/the_mall.html
@@ -35,6 +35,7 @@
                             <th>Stall Name</th>
                             <th>Owner IGN</th>
                             <th>Street Name</th>
+                            <th>Items Sold</th>
                         </tr>
                     </thead>
                     <tbody>
