--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
     <footer>
-        <p>&copy; 2025 Furryville Index. Your guide to shopping in Furryville.</p>
+        <p>&copy; 2025 Furryville. Designed and Developed by Postman67</p>
     </footer>
