--- a/templates/index.html
+++ b/templates/index.html
@@ -21,20 +21,27 @@
             {% endif %}
         </div>
 
-        <section class="features">
-            <div class="feature-card">
-                <h3>Warp Hall Directory</h3>
-                <p>Browse all the warps avaliable at the Warp Hall</p>
-            </div>
-            <div class="feature-card">
-                <h3>The Mall</h3>
-                <p>Browse and find where each shop is located in The Mall</p>
-            </div>
-            <div class="feature-card">
-                <h3>About Furryville</h3>
-                <p>Learn more about Furryville and its leadership</p>
-            </div>
-        </section>
+        <div class="home-layout">
+            <aside class="discord-sidebar">
+                <h3>Join Our Community</h3>
+                <iframe src="https://discord.com/widget?id=1388652976037429298&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            </aside>
+
+            <section class="features">
+                <div class="feature-card">
+                    <h3>Warp Hall Directory</h3>
+                    <p>Browse all the warps avaliable at the Warp Hall</p>
+                </div>
+                <div class="feature-card">
+                    <h3>The Mall</h3>
+                    <p>Browse and find where each shop is located in The Mall</p>
+                </div>
+                <div class="feature-card">
+                    <h3>About Furryville</h3>
+                    <p>Learn more about Furryville and its leadership</p>
+                </div>
+            </section>
+        </div>
     </main>
 
     {% include 'footer.html' %}
