Chnaged boxes and widget to flexboxes

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <iframe src="https://discord.com/widget?id=1388652976037429298&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </aside>
 
-            <section class="features">
+            <div class="features">
                 <div class="feature-card">
                     <h3>Warp Hall Directory</h3>
                     <p>Browse all the warps avaliable at the Warp Hall</p>
@@ -40,7 +40,7 @@
                     <h3>About Furryville</h3>
                     <p>Learn more about Furryville and its leadership</p>
                 </div>
-            </section>
+            </div>
         </div>
     </main>
 
