--- a/templates/index.html
+++ b/templates/index.html
@@ -27,18 +27,18 @@
         </div>
 
         <section class="features">
-            <div class="feature-card">
+            <a href="{{ url_for('warp_hall') }}" class="feature-card feature-button">
                 <h3>Warp Hall Directory</h3>
                 <p>Browse all the warps avaliable at the Warp Hall</p>
-            </div>
-            <div class="feature-card">
+            </a>
+            <a href="{{ url_for('the_mall') }}" class="feature-card feature-button">
                 <h3>The Mall</h3>
                 <p>Browse and find where each shop is located in The Mall</p>
-            </div>
-            <div class="feature-card">
+            </a>
+            <a href="/about" class="feature-card feature-button">
                 <h3>About Furryville</h3>
                 <p>Learn more about Furryville and its leadership</p>
-            </div>
+            </a>
         </section>
     </main>
 
