--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,7 +74,8 @@ body {
 
 .hero-section {
     text-align: center;
-    padding: 4rem 0;
+    padding-top: 4rem;
+    padding-bottom: 0rem;
     color: white;
 }
 
@@ -86,7 +87,7 @@ body {
 
 .hero-section p {
     font-size: 1.2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
@@ -104,14 +105,14 @@ body {
     display: inline-flex;
     align-items: center;
     gap: 0.5rem;
-    padding: 0.8rem 1.5rem;
+    padding: 0.7rem 4rem;
     border-radius: 25px;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: 1.3rem;
     margin: 1rem 0;
     backdrop-filter: blur(10px);
     border: 2px solid;
-    transition: all 0.3s ease;
+    transition: all 0.4s ease;
 }
 
 .db-status.db-online {
@@ -176,7 +177,6 @@ body {
     border-radius: 15px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
     border: 1px solid #555;
 }
 
@@ -189,7 +189,7 @@ body {
 .card-visible {
     opacity: 1;
     transform: translateY(0);
-    transition: opacity 0.6s ease, transform 0.6s ease;
+    transition: opacity 0.6s ease, transform 0.6s ease, border-color 0.2s ease, box-shadow 0.9s ease;
 }
 
 .feature-button {
