udpated footer wording

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,3 @@
     <footer>
-        <p>&copy; 2025 Furryville. Designed and Developed by Postman67</p>
+        <p>&copy; 2025 Furryville. Developed and maintained by Postman67</p>
     </footer>
