Changed to discord PFPs using Discord CDN. Removed static images

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,17 +23,17 @@
             <div class="staff-grid">
                 <div class="staff-card">
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/106800625316040704/8a9adfb4dc9da28249e287af1d59865d?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
-                        <h3 class="staff-name">Server Owner</h3>
-                        <p class="staff-title">Community Leader & Founder</p>
+                        <h3 class="staff-name">EmmyTheB</h3>
+                        <p class="staff-title">Founder of something ville</p>
                     </div>
                 </div>
 
                 <div class="staff-card">
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Head Administrator</h3>
@@ -43,7 +43,7 @@
 
                 <div class="staff-card">
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Community Manager</h3>
@@ -53,7 +53,7 @@
 
                 <div class="staff-card">
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Build Team Lead</h3>
@@ -63,7 +63,7 @@
 
                 <div class="staff-card">
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Technical Lead</h3>
