--- a/templates/about.html
+++ b/templates/about.html
@@ -22,8 +22,9 @@
             
             <div class="staff-grid">
                 <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_bc94738789bba8b3ac0b6ff3f1b3b4a7?size=128" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Server Owner</h3>
@@ -32,8 +33,9 @@
                 </div>
 
                 <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_bc94738789bba8b3ac0b6ff3f1b3b4a7?size=128" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Head Administrator</h3>
@@ -42,8 +44,9 @@
                 </div>
 
                 <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_bc94738789bba8b3ac0b6ff3f1b3b4a7?size=128" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Community Manager</h3>
@@ -52,8 +55,9 @@
                 </div>
 
                 <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_bc94738789bba8b3ac0b6ff3f1b3b4a7?size=128" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Build Team Lead</h3>
@@ -62,8 +66,9 @@
                 </div>
 
                 <div class="staff-card">
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="{{ url_for('static', filename='images/avatars/placeholder.png') }}" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_bc94738789bba8b3ac0b6ff3f1b3b4a7?size=128" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">Technical Lead</h3>
