--- a/static/css/about.css
+++ b/static/css/about.css
@@ -47,7 +47,7 @@
     top: 0;
     right: 0;
     bottom: 0;
-    width: 200px;
+    width: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
