Added more members to the about

--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="staff-info">
                         <h3 class="staff-name">EmmyTheB</h3>
-                        <p class="staff-title">Founder of something ville</p>
+                        <p class="staff-title">Founder of Furryville South West & Owner of The Mall</p>
                     </div>
                 </div>
 
@@ -37,41 +37,60 @@
                         <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
-                        <h3 class="staff-name">Head Administrator</h3>
-                        <p class="staff-title">Server Administration & Moderation</p>
+                        <h3 class="staff-name">Cute_The_Sylveon</h3>
+                        <p class="staff-title">Owner of the Warp Hall & Co-Owner of The Mall</p>
                     </div>
                 </div>
 
                 <div class="staff-card">
-                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/288742669054640128/a_50ddb99473628552b1abca17564f0b40.gif?size=1024');"></div>
                     <div class="staff-avatar">
-                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/288742669054640128/a_093bc979da1ff0cfafdc7f70de87519e.gif?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
-                        <h3 class="staff-name">Community Manager</h3>
-                        <p class="staff-title">Events & Community Engagement</p>
+                        <h3 class="staff-name">TEMP USERNAME</h3>
+                        <p class="staff-title">Mayor of Furryville South West</p>
                     </div>
                 </div>
 
                 <div class="staff-card">
-                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
+                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/341469017149669376/7ed7496b376a8a790cd6afeaf646d8db.png?size=1024');"></div>
                     <div class="staff-avatar">
-                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/341469017149669376/d6d4f0d64e87447fb858ed0402493ad1.png?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
-                        <h3 class="staff-name">Build Team Lead</h3>
-                        <p class="staff-title">Creative Building & World Design</p>
+                        <h3 class="staff-name">Its_True</h3>
+                        <p class="staff-title">Vice Mayor of Furryville South West</p>
                     </div>
                 </div>
 
                 <div class="staff-card">
-                    <div class="staff-banner" style="background-image: url('https://cdn.discordapp.com/banners/147822143432818688/a_85477d53cc2989a17450486c3b82f3e4?size=512');"></div>
                     <div class="staff-avatar">
-                        <img src="https://cdn.discordapp.com/avatars/147822143432818688/a_2ff859d2c9de00f32d542bde02aa735f?size=1024" alt="Staff Avatar" class="avatar-image">
+                        <img src="https://cdn.discordapp.com/avatars/815274073323077662/357d8bd10b7a8367af767c1b51de6cea.png?size=1024" alt="Staff Avatar" class="avatar-image">
                     </div>
                     <div class="staff-info">
-                        <h3 class="staff-name">Technical Lead</h3>
-                        <p class="staff-title">Server Management & Development</p>
+                        <h3 class="staff-name">MoonliteZoey</h3>
+                        <p class="staff-title">Founder of Furryville Central</p>
+                    </div>
+                </div>
+                
+                <div class="staff-card">
+                    <div class="staff-avatar">
+                        <img src="https://cdn.discordapp.com/avatars/234294334181081090/7ba2b99e0a44f6f1622fb128406ea9f4.png?size=1024" alt="Staff Avatar" class="avatar-image">
+                    </div>
+                    <div class="staff-info">
+                        <h3 class="staff-name">Zombooger</h3>
+                        <p class="staff-title">Mayor of Furryville Central</p>
+                    </div>
+                </div>
+
+                <div class="staff-card">
+                    <div class="staff-avatar">
+                        <img src="https://cdn.discordapp.com/avatars/583228494683701279/c1cbb3f4e2bc1a3da078534f1921ae07.png?size=1024" alt="Staff Avatar" class="avatar-image">
+                    </div>
+                    <div class="staff-info">
+                        <h3 class="staff-name">king1369</h3>
+                        <p class="staff-title">Mayor of Furryville Central</p>
                     </div>
                 </div>
             </div>
