--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,4 @@
     <footer>
+        <p>Site still in Beta!</p>
         <p>&copy; 2025 Furryville. Developed and maintained by Postman67</p>
     </footer>
